--- a/index.html
+++ b/index.html
@@ -5,19 +5,24 @@
     <meta http-equiv="Content-Language" content="pl" />
     <meta name="Author" content="Artem Tsymbalov" />
     <title>Największe mosty świata</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <section>
-        <nav>
-        <ul>
-        <li><a href="./danyangKunshan.html">Most Danyang-Kunshan </a></li>
-        <li><a href="./tianjinGrandBridge.html">Most Tianjin Grand Bridge</a></li>
-        <li><a href="./weinanWeiheGrandBridge.html">Most Weinan Weihe Grand Bridge</a></li>
-        <li><a href="./bangNaExpressway.html">Most Bang Na Expressway</a></li>
-        <li><a href="./manchac.html">Most Manchac</a></li>
-        <li><a href="./kontakt.html">Kontakt</a></li>
-        </ul>
-        </nav>
-        </section>
+    <!-- Menu strony -->
+    <table>
+      <tr>
+        <td><a href="./danyangKunshan.html">Most Danyang-Kunshan </a></td>
+        <td><a href="./tianjinGrandBridge.html">Most Tianjin Grand Bridge</a></td>
+        <td><a href="./weinanWeiheGrandBridge.html">Most Weinan Weihe Grand Bridge</a></td>
+        <td><a href="./bangNaExpressway.html">Most Bang Na Expressway</a></td>
+        <td><a href="./manchac.html">Most Manchac</a></td>
+        <td><a href="./kontakt.html">Kontakt</a></td>
+      </tr>
+      </table>
+      <div class="containet">
+        <h1>To jest strona o największych mosty świata
+      </div>
+
+
   </body>
 </html>
