--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
       </tr>
       </table>
       <div class="containet">
-        <h1>To jest strona o największych mosty świata
+        <h1>To jest strona o największych mostah świata</h1>
       </div>
-
-
+  <img src="./imgs/mostNight.png" alt="">
+  <img src="./imgs/mostSketch.png" alt="">
+  <img src="./imgs/mostCars.png"
   </body>
 </html>
