--- a/danyangKunshan.html
+++ b/danyangKunshan.html
@@ -4,10 +4,23 @@
     <meta http-equiv="Content-type" content="text/html; charset=UTF-8" />
     <meta http-equiv="Content-Language" content="pl" />
     <meta name="Author" content="Artem Tsymbalov" />
-    <title>Największe mosty świata</title>
+    <title>Most Danyang-Kunshan/title>
     <link rel="stylesheet" href="style.css">
   </head>
   <bady>
+    <!-- Menu strony -->
+    <table>
+      <tr>
+        <td><a href="./index.html">Strona Główna</a></td>
+        <td><a href="./danyangKunshan.html">Most Danyang-Kunshan </a></td>
+        <td><a href="./tianjinGrandBridge.html">Most Tianjin Grand Bridge</a></td>
+        <td><a href="./weinanWeiheGrandBridge.html">Most Weinan Weihe Grand Bridge</a></td>
+        <td><a href="./bangNaExpressway.html">Most Bang Na Expressway</a></td>
+        <td><a href="./manchac.html">Most Manchac</a></td>
+        <td><a href="./kontakt.html">Kontakt</a></td>
+      </tr>
+    </table>
+    <h1>Most Danyang-Kunshan</h1>
     <img src="./imgs/Wielki Most Danyang-Kunshan.png">
     <img src="./imgs/Wielki Most Danyang-Kunshan2.png">
     <img src="./imgs/Wielki Most Danyang-Kunshan3.png">
