--- a/bangNaExpressway.html
+++ b/bangNaExpressway.html
@@ -8,6 +8,19 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <!-- Menu strony -->
+    <table>
+        <tr>
+            <td><a href="./index.html">Strona Główna</a></td>
+          <td><a href="./danyangKunshan.html">Most Danyang-Kunshan </a></td>
+          <td><a href="./tianjinGrandBridge.html">Most Tianjin Grand Bridge</a></td>
+          <td><a href="./weinanWeiheGrandBridge.html">Most Weinan Weihe Grand Bridge</a></td>
+          <td><a href="./bangNaExpressway.html">Most Bang Na Expressway</a></td>
+          <td><a href="./manchac.html">Most Manchac</a></td>
+          <td><a href="./kontakt.html">Kontakt</a></td>
+        </tr>
+      </table>
+      <h1>Most Bang Na Expressway</h1>
     <img src="./imgs/Bang Na Expressway.png" alt="">
     <img src="./imgs/Bang Na ExpresswayImgtxt.png">
   </body>
