--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!-- Menu strony -->
     <table>
       <tr>
+        <td><a href="./index.html">Strona Główna</a></td>
         <td><a href="./danyangKunshan.html">Most Danyang-Kunshan </a></td>
         <td><a href="./tianjinGrandBridge.html">Most Tianjin Grand Bridge</a></td>
         <td><a href="./weinanWeiheGrandBridge.html">Most Weinan Weihe Grand Bridge</a></td>
@@ -20,7 +21,7 @@
       </tr>
       </table>
       <div class="containet">
-        <h1>To jest strona o największych mostah świata</h1>
+        <h1>To jest strona o największych mostach świata</h1>
       </div>
   <img src="./imgs/mostNight.png" alt="">
   <img src="./imgs/mostSketch.png" alt="">
