--- a/weinanWeiheGrandBridge.html
+++ b/weinanWeiheGrandBridge.html
@@ -8,6 +8,18 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <bady>
+    <!-- Menu strony -->
+    <table>
+        <tr>
+            <td><a href="./index.html">Strona Główna</a></td>
+          <td><a href="./danyangKunshan.html">Most Danyang-Kunshan </a></td>
+          <td><a href="./tianjinGrandBridge.html">Most Tianjin Grand Bridge</a></td>
+          <td><a href="./weinanWeiheGrandBridge.html">Most Weinan Weihe Grand Bridge</a></td>
+          <td><a href="./bangNaExpressway.html">Most Bang Na Expressway</a></td>
+          <td><a href="./manchac.html">Most Manchac</a></td>
+          <td><a href="./kontakt.html">Kontakt</a></td>
+        </tr>
+      </table>
     <img src="./imgs/Weinan Weihe Grand Bridge.png">
     <img src="./imgs/Weinan Weihe Grand Bridge2.png">
   </bady>
