Imgs rename, sub stron structure changes

--- a/bangNaExpressway.html
+++ b/bangNaExpressway.html
@@ -1,27 +1,50 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="pl">
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=UTF-8" />
     <meta http-equiv="Content-Language" content="pl" />
     <meta name="Author" content="Artem Tsymbalov" />
-    <title>Największe mosty świata</title>
+    <title>Największe mosty świata - Most Bang Na Expressway</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <!-- Menu strony -->
     <table>
-        <tr>
-            <td><a href="./index.html">Strona Główna</a></td>
-          <td><a href="./danyangKunshan.html">Most Danyang-Kunshan </a></td>
-          <td><a href="./tianjinGrandBridge.html">Most Tianjin Grand Bridge</a></td>
-          <td><a href="./weinanWeiheGrandBridge.html">Most Weinan Weihe Grand Bridge</a></td>
-          <td><a href="./bangNaExpressway.html">Most Bang Na Expressway</a></td>
-          <td><a href="./manchac.html">Most Manchac</a></td>
-          <td><a href="./kontakt.html">Kontakt</a></td>
-        </tr>
-      </table>
+      <tr>
+        <td><a href="./index.html">Strona Główna</a></td>
+        <td><a href="./danyangKunshan.html">Most Danyang-Kunshan</a></td>
+        <td><a href="./tianjinGrandBridge.html">Most Tianjin Grand Bridge</a></td>
+        <td><a href="./weinanWeiheGrandBridge.html">Most Weinan Weihe Grand Bridge</a></td>
+        <td><a href="./bangNaExpressway.html">Most Bang Na Expressway</a></td>
+        <td><a href="./manchac.html">Most Manchac</a></td>
+        <td><a href="./kontakt.html">Kontakt</a></td>
+      </tr>
+    </table>
+
+    <div class="container">
       <h1>Most Bang Na Expressway</h1>
-    <img src="./imgs/Bang Na Expressway.png" alt="">
-    <img src="./imgs/Bang Na ExpresswayImgtxt.png">
+
+      <div class="bridge-info">
+        <!-- Sekcja 1: Opis Mostu Bang Na Expressway -->
+        <div class="bridge-item">
+          <img src="./imgs/Bang Na Expressway.png" alt="Most Bang Na Expressway 1">
+          <div class="text">
+            <h2>Opis Mostu Bang Na Expressway</h2>
+            <p>Most Bang Na Expressway, znany również jako Most Bang Na, znajduje się w Bangkoku w Tajlandii. Jest to most drogowy o imponującej długości, który odgrywa kluczową rolę w usprawnianiu ruchu drogowego w regionie.</p>
+          </div>
+        </div>
+
+        <!-- Sekcja 2: Znaczenie Mostu -->
+        <div class="bridge-item">
+          <img src="./imgs/Bang Na ExpresswayImgtxt.png" alt="Most Bang Na Expressway 2">
+          <div class="text">
+            <h2>Znaczenie Mostu</h2>
+            <p>Most Bang Na Expressway jest jednym z najdłuższych mostów drogowych na świecie, mierzący około 54 km długości. Umożliwia szybki i efektywny transport między różnymi częściami Bangkoku, redukując czas podróży i poprawiając płynność ruchu.</p>
+          </div>
+        </div>
+
+
+      </div>
+    </div>
   </body>
 </html>
