--- a/manchac.html
+++ b/manchac.html
@@ -1,27 +1,48 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="pl">
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=UTF-8" />
     <meta http-equiv="Content-Language" content="pl" />
     <meta name="Author" content="Artem Tsymbalov" />
-    <title>Największe mosty świata</title>
+    <title>Największe mosty świata - Most Manchac</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <!-- Menu strony -->
     <table>
-        <tr>
-            <td><a href="./index.html">Strona Główna</a></td>
-          <td><a href="./danyangKunshan.html">Most Danyang-Kunshan </a></td>
-          <td><a href="./tianjinGrandBridge.html">Most Tianjin Grand Bridge</a></td>
-          <td><a href="./weinanWeiheGrandBridge.html">Most Weinan Weihe Grand Bridge</a></td>
-          <td><a href="./bangNaExpressway.html">Most Bang Na Expressway</a></td>
-          <td><a href="./manchac.html">Most Manchac</a></td>
-          <td><a href="./kontakt.html">Kontakt</a></td>
-        </tr>
-      </table>
+      <tr>
+        <td><a href="./index.html">Strona Główna</a></td>
+        <td><a href="./danyangKunshan.html">Most Danyang-Kunshan</a></td>
+        <td><a href="./tianjinGrandBridge.html">Most Tianjin Grand Bridge</a></td>
+        <td><a href="./weinanWeiheGrandBridge.html">Most Weinan Weihe Grand Bridge</a></td>
+        <td><a href="./bangNaExpressway.html">Most Bang Na Expressway</a></td>
+        <td><a href="./manchac.html">Most Manchac</a></td>
+        <td><a href="./kontakt.html">Kontakt</a></td>
+      </tr>
+    </table>
+
+    <div class="container">
       <h1>Most Manchac</h1>
-  <img src="./imgs/Manchac.png" alt="">
-  <img src="./imgs/Manchac2.png" alt="">
+
+      <div class="bridge-info">
+        <!-- Sekcja 1: Opis Mostu Manchac -->
+        <div class="bridge-item">
+          <img src="./imgs/Manchac.png" alt="Most Manchac - Widok z przodu">
+          <div class="text">
+            <h2>Opis Mostu Manchac</h2>
+            <p>Most Manchac, znany również jako <i>Manchac Bridge</i>, znajduje się w Luizjanie, USA. Jest to jeden z najdłuższych mostów drogowych w Stanach Zjednoczonych, który łączy północną część Luizjany z jej południową częścią, ułatwiając transport i komunikację w regionie.</p>
+          </div>
+        </div>
+
+        <!-- Sekcja 2: Znaczenie Mostu -->
+        <div class="bridge-item">
+          <img src="./imgs/Manchac2.png" alt="Most Manchac - Widok z boku">
+          <div class="text">
+            <h2>Znaczenie Mostu</h2>
+            <p>Most Manchac odgrywa kluczową rolę w lokalnej infrastrukturze transportowej, umożliwiając szybki i efektywny przepływ ruchu między dwoma częściami Luizjany. Dzięki swojej długości i strategicznemu położeniu, most ten znacząco skraca czas podróży oraz redukuje zatłoczenie na innych trasach.</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
