--- a/bangNaExpressway.html
+++ b/bangNaExpressway.html
@@ -1,9 +1,9 @@
 <!DOCTYPE HTML>
 <html lang="pl">
   <head>
-    <meta http-equiv="Content-type" content="text/html; charset=UTF-8" />
-    <meta http-equiv="Content-Language" content="pl" />
-    <meta name="Author" content="Artem Tsymbalov" />
+    <meta charset="UTF-8">
+    <meta name="Content-Language" content="pl">
+    <meta name="Author" content="Artem Tsymbalov">
     <title>Największe mosty świata - Most Bang Na Expressway</title>
     <link rel="stylesheet" href="style.css">
   </head>
@@ -27,7 +27,7 @@
       <div class="bridge-info">
         <!-- Sekcja 1: Opis Mostu Bang Na Expressway -->
         <div class="bridge-item">
-          <img src="./imgs/Bang Na Expressway.png" alt="Most Bang Na Expressway 1">
+          <img src="./imgs/BangNaExpressway.png" alt="Most Bang Na Expressway 1">
           <div class="text">
             <h2>Opis Mostu Bang Na Expressway</h2>
             <p>Most Bang Na Expressway, znany również jako Most Bang Na, znajduje się w Bangkoku w Tajlandii. Jest to most drogowy o imponującej długości, który odgrywa kluczową rolę w usprawnianiu ruchu drogowego w regionie.</p>
@@ -36,7 +36,7 @@
 
         <!-- Sekcja 2: Znaczenie Mostu -->
         <div class="bridge-item">
-          <img src="./imgs/Bang Na ExpresswayImgtxt.png" alt="Most Bang Na Expressway 2">
+          <img src="./imgs/BangNaExpresswayImgTxt.png" alt="Most Bang Na Expressway 2">
           <div class="text">
             <h2>Znaczenie Mostu</h2>
             <p>Most Bang Na Expressway jest jednym z najdłuższych mostów drogowych na świecie, mierzący około 54 km długości. Umożliwia szybki i efektywny transport między różnymi częściami Bangkoku, redukując czas podróży i poprawiając płynność ruchu.</p>
