--- a/manchac.html
+++ b/manchac.html
@@ -1,9 +1,9 @@
 <!DOCTYPE HTML>
 <html lang="pl">
   <head>
-    <meta http-equiv="Content-type" content="text/html; charset=UTF-8" />
-    <meta http-equiv="Content-Language" content="pl" />
-    <meta name="Author" content="Artem Tsymbalov" />
+    <meta charset="UTF-8">
+    <meta name="Content-Language" content="pl">
+    <meta name="Author" content="Artem Tsymbalov">
     <title>Największe mosty świata - Most Manchac</title>
     <link rel="stylesheet" href="style.css">
   </head>
