--- a/weinanWeiheGrandBridge.html
+++ b/weinanWeiheGrandBridge.html
@@ -1,9 +1,9 @@
 <!DOCTYPE HTML>
 <html lang="pl">
   <head>
-    <meta http-equiv="Content-type" content="text/html; charset=UTF-8" />
-    <meta http-equiv="Content-Language" content="pl" />
-    <meta name="Author" content="Artem Tsymbalov" />
+    <meta charset="UTF-8">
+    <meta name="Content-Language" content="pl">
+    <meta name="Author" content="Artem Tsymbalov">
     <title>Największe mosty świata</title>
     <link rel="stylesheet" href="style.css">
   </head>
@@ -27,7 +27,7 @@
       <div class="bridge-info">
         <!-- Sekcja 1: Opis Mostu Weinan Weihe Grand Bridge -->
         <div class="bridge-item">
-          <img src="./imgs/Weinan Weihe Grand Bridge.png" alt="Most Weinan Weihe Grand Bridge 1">
+          <img src="./imgs/WeinanWeiheGrandBridge.png" alt="Most Weinan Weihe Grand Bridge 1">
           <div class="text">
             <h2>Opis Mostu Weinan Weihe Grand Bridge</h2>
             <p>Most Weinan Weihe Grand Bridge to imponująca konstrukcja znajdująca się w Chinach. Jest to jeden z najdłuższych mostów na świecie, który odgrywa kluczową rolę w połączeniu regionów gospodarczych i ułatwieniu transportu.</p>
@@ -36,7 +36,7 @@
 
         <!-- Sekcja 2: Znaczenie Mostu -->
         <div class="bridge-item">
-          <img src="./imgs/Weinan Weihe Grand Bridge2.png" alt="Most Weinan Weihe Grand Bridge 2">
+          <img src="./imgs/WeinanWeiheGrandBridge2.png" alt="Most Weinan Weihe Grand Bridge 2">
           <div class="text">
             <h2>Znaczenie Mostu</h2>
             <p>Most Weinan Weihe Grand Bridge jest istotny dla rozwoju infrastruktury transportowej w regionie. Umożliwia sprawny przepływ towarów i osób, co przyczynia się do wzrostu gospodarczego oraz integracji społecznej.</p>
@@ -45,7 +45,7 @@
 
 
         </div>
-      </div>
+
     </div>
   </body>
 </html>
