--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE HTML>
 <html lang="pl">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="Content-Language" content="pl" />
-    <meta name="Author" content="Artem Tsymbalov" />
+    <meta charset="UTF-8">
+    <meta name="Content-Language" content="pl">
+    <meta name="Author" content="Artem Tsymbalov">
     <title>Największe mosty świata</title>
     <link rel="stylesheet" href="style.css">
   </head>
