--- a/kontakt.html
+++ b/kontakt.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-    <meta http-equiv="Content-type" content="text/html; charset=UTF-8" />
-    <meta http-equiv="Content-Language" content="pl" />
-    <meta name="Author" content="Artem Tsymbalov" />
+    <meta http-equiv="Content-type" content="text/html; charset=UTF-8">
+    <meta name="Content-Language" content="pl">
+    <meta name="Author" content="Artem Tsymbalov">
     <title>Kontakt</title>
     <link rel="stylesheet" href="style.css">
 </head>
