add2 imgs in index

--- a/index.html
+++ b/index.html
@@ -65,12 +65,29 @@
         <div class="bridge-item">
           <img src="./imgs/mostWhite.png" alt="Most">
           <div class="text">
-            <h2>Tradycyjny przykład dużych konstrukcji mostowych.h</h2>
+            <h2>Tradycyjny przykład dużych konstrukcji mostowych</h2>
             <p>Tradycyjny przykład dużych konstrukcji mostowych. Z masywnymi podporami i systemem linowym,
                taki most gwarantuje stabilność i trwałość na lata. Jest to nieoceniony element infrastruktury
                 transportowej, szczególnie w regionach, gdzie mosty łączą kluczowe drogi handlowe. Jego monumentalna
                  konstrukcja nie tylko służy celom praktycznym, ale również wpływa na krajobraz, stając 
                  się integralnym elementem otoczenia.</p>
+          </div>
+        </div>
+        <div class="bridge-item">
+          <img src="./imgs/RetroBridge.jpg" alt="MostRetro">
+          <div class="text">
+            <h2>Minimalistyczna i skupiona na estetyce</h2>
+            <p>Most wznosi się nad miastem niczym smukła wieża, łącząc brzegi i perspektywy. Jego elegancka sylwetka,
+               podkreślona ciepłymi barwami zachodzącego słońca, tworzy harmonijną kompozycję z dynamicznymi liniami
+                miejskiej zabudowy. To nie tylko funkcjonalna konstrukcja, ale także ikona nowoczesnej architektury.</p>
+          </div>
+        </div>
+        <div class="bridge-item">
+          <img src="./imgs/LowPoleeBridge.jpg" alt="Most">
+          <div class="text">
+            <h2>Wywołanie nostalgii i poczucia przygody</h2>
+            <p>Most budzi wspomnienia z dzieciństwa i przywołuje obraz mostów z bajek i legend. To symbol przygody,
+               odkrywania nowych miejsc i przekraczania granic.</p>
           </div>
         </div>
       </div>
