--- a/index.html
+++ b/index.html
@@ -42,14 +42,19 @@
         </div>
         
         <div class="bridge-item">
-          <img src="./imgs/mostCars.png" alt="MostCars">
           <div class="text">
             <h2>Funkcji mostów w transporcie</h2>
             <p>Mosty odgrywają kluczową rolę w systemie transportowym, umożliwiając przejazd samochodów
-               z jednego końca miasta na drugi. Dzięki nim możliwe jest szybkie i wygodne łączenie różnych obszarów,
+               z jednego końca miasta na drugi.<img src="./imgs/OneCar.png" alt="MostCar" class="rightimg"> Dzięki nim możliwe jest szybkie i wygodne łączenie różnych obszarów,
                 co znacząco ułatwia codzienny ruch. Ponadto mosty pomagają w regulacji natężenia ruchu w miastach
                  i ich okolicach, zapewniając płynność komunikacyjną oraz zmniejszając korki. Są one istotnym
                   elementem infrastruktury, który wspiera rozwój miast i regionów.</p>
+          </div>
+          <div class="text">
+            <h2>Minimalistyczna i skupiona na estetyce</h2>
+            <p>Most wznosi się nad miastem niczym smukła wieża, łącząc brzegi i perspektywy.<img src="./imgs/RetroBridge.jpg" alt="MostRetro" class="rightimg"> Jego elegancka sylwetka,
+              podkreślona ciepłymi barwami zachodzącego słońca, tworzy harmonijną kompozycję z dynamicznymi liniami
+               miejskiej zabudowy. To nie tylko funkcjonalna konstrukcja, ale także ikona nowoczesnej architektury.</p>
           </div>
         </div>
         <div class="bridge-item">
@@ -71,15 +76,6 @@
                 transportowej, szczególnie w regionach, gdzie mosty łączą kluczowe drogi handlowe. Jego monumentalna
                  konstrukcja nie tylko służy celom praktycznym, ale również wpływa na krajobraz, stając 
                  się integralnym elementem otoczenia.</p>
-          </div>
-        </div>
-        <div class="bridge-item">
-          <img src="./imgs/RetroBridge.jpg" alt="MostRetro">
-          <div class="text">
-            <h2>Minimalistyczna i skupiona na estetyce</h2>
-            <p>Most wznosi się nad miastem niczym smukła wieża, łącząc brzegi i perspektywy. Jego elegancka sylwetka,
-               podkreślona ciepłymi barwami zachodzącego słońca, tworzy harmonijną kompozycję z dynamicznymi liniami
-                miejskiej zabudowy. To nie tylko funkcjonalna konstrukcja, ale także ikona nowoczesnej architektury.</p>
           </div>
         </div>
         <div class="bridge-item">
