wersji 1.1 js lab2

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <td><a href="./bangNaExpressway.html">Most Bang Na Expressway</a></td>
         <td><a href="./manchac.html">Most Manchac</a></td>
         <td><a href="./kontakt.html">Kontakt</a></td>
+        <td><a href="./lab2js.html">Lab2 Java Script</a></td>
       </tr>
     </table>
     
