--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <td><a href="./manchac.html">Most Manchac</a></td>
         <td><a href="./kontakt.html">Kontakt</a></td>
         <td><a href="./lab2js.html">Lab2 Java Script</a></td>
+        <td><a href="./lab3.html">Lab3</a></td>
       </tr>
     </table>
     
