--- a/lab2js.html
+++ b/lab2js.html
@@ -2,7 +2,9 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Moja strona www</title>
+  <meta name="Content-Language" content="pl">
+  <meta name="Author" content="Artem Tsymbalov">
+  <title>Największe mosty świata</title>
   <script src="./js/timedate.js"></script>
 </head>
 <body onload="startclock()">
