--- a/html/kontakt.html
+++ b/html/kontakt.html
@@ -5,18 +5,18 @@
     <meta name="Content-Language" content="pl">
     <meta name="Author" content="Artem Tsymbalov">
     <title>Kontakt</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <!-- Menu strony -->
     <table>
         <tr>
-            <td><a href="./index.html">Strona Główna</a></td>
-          <td><a href="./danyangKunshan.html">Most Danyang-Kunshan </a></td>
-          <td><a href="./tianjinGrandBridge.html">Most Tianjin Grand Bridge</a></td>
-          <td><a href="./weinanWeiheGrandBridge.html">Most Weinan Weihe Grand Bridge</a></td>
-          <td><a href="./bangNaExpressway.html">Most Bang Na Expressway</a></td>
-          <td><a href="./manchac.html">Most Manchac</a></td>
+            <td><a href="../index.html">Strona Główna</a></td>
+          <td><a href="danyangKunshan.html">Most Danyang-Kunshan </a></td>
+          <td><a href="tianjinGrandBridge.html">Most Tianjin Grand Bridge</a></td>
+          <td><a href="weinanWeiheGrandBridge.html">Most Weinan Weihe Grand Bridge</a></td>
+          <td><a href="bangNaExpressway.html">Most Bang Na Expressway</a></td>
+          <td><a href="manchac.html">Most Manchac</a></td>
           <td><a href="./kontakt.html">Kontakt</a></td>
         </tr>
       </table>
