--- a/html/tianjinGrandBridge.html
+++ b/html/tianjinGrandBridge.html
@@ -5,19 +5,19 @@
     <meta name="Content-Language" content="pl">
     <meta name="Author" content="Artem Tsymbalov">
     <title>Most Tianjin Grand Bridge</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/style.css">
   </head>
   <body>
     <!-- Menu strony -->
     <table>
       <tr>
-        <td><a href="./index.html">Strona Główna</a></td>
-        <td><a href="./danyangKunshan.html">Most Danyang-Kunshan</a></td>
+        <td><a href="../index.html">Strona Główna</a></td>
+        <td><a href="danyangKunshan.html">Most Danyang-Kunshan</a></td>
         <td><a href="./tianjinGrandBridge.html">Most Tianjin Grand Bridge</a></td>
-        <td><a href="./weinanWeiheGrandBridge.html">Most Weinan Weihe Grand Bridge</a></td>
-        <td><a href="./bangNaExpressway.html">Most Bang Na Expressway</a></td>
-        <td><a href="./manchac.html">Most Manchac</a></td>
-        <td><a href="./kontakt.html">Kontakt</a></td>
+        <td><a href="weinanWeiheGrandBridge.html">Most Weinan Weihe Grand Bridge</a></td>
+        <td><a href="bangNaExpressway.html">Most Bang Na Expressway</a></td>
+        <td><a href="manchac.html">Most Manchac</a></td>
+        <td><a href="kontakt.html">Kontakt</a></td>
       </tr>
     </table>
 
@@ -27,7 +27,7 @@
       <div class="bridge-info">
         <!-- Sekcja 1: Opis mostu Tianjin Grand Bridge -->
         <div class="bridge-item">
-          <img src="./imgs/TianjinGrandBridge.png" alt="Most Tianjin Grand Bridge 1">
+          <img src="../imgs/TianjinGrandBridge.png" alt="Most Tianjin Grand Bridge 1">
           <div class="text">
             <h2>Opis Mostu Tianjin Grand Bridge</h2>
             <p>Most Tianjin Grand Bridge to czwarty najdłuższy most na świecie, o długości 113,7 km. Znajduje się w północnych Chinach, na trasie kolei szybkobieżnej łączącej Pekin z Szanghajem.</p>
@@ -36,7 +36,7 @@
 
         <!-- Sekcja 2: Znaczenie Mostu -->
         <div class="bridge-item">
-          <img src="./imgs/TianjinGrandBridge2.png" alt="Most Tianjin Grand Bridge 2">
+          <img src="../imgs/TianjinGrandBridge2.png" alt="Most Tianjin Grand Bridge 2">
           <div class="text">
             <h2>Znaczenie Mostu</h2>
             <p>Most pełni kluczową rolę w usprawnianiu transportu pomiędzy dwoma ważnymi chińskimi miastami, Tianjin i Langfang. Został ukończony w 2010 roku i jest integralną częścią szybkiej kolei chińskiej.</p>
@@ -45,7 +45,7 @@
 
         <!-- Sekcja 3: Ciekawostki -->
         <div class="bridge-item">
-          <img src="./imgs/TianjinGrandBridge3.png" alt="Most Tianjin Grand Bridge 3">
+          <img src="../imgs/TianjinGrandBridge3.png" alt="Most Tianjin Grand Bridge 3">
           <div class="text">
             <h2>Ciekawostki</h2>
             <p>Budowa tego gigantycznego mostu była ogromnym wyzwaniem inżynieryjnym. Ze względu na jego długość oraz trudności terenowe, inżynierowie musieli zastosować nowatorskie techniki konstrukcyjne.</p>
