--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
     <meta name="Content-Language" content="pl">
     <meta name="Author" content="Artem Tsymbalov">
     <title>Największe mosty świata</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <!-- Menu strony -->
     <table>
       <tr>
         <td><a href="./index.html">Strona Główna</a></td>
-        <td><a href="./danyangKunshan.html">Most Danyang-Kunshan</a></td>
-        <td><a href="./tianjinGrandBridge.html">Most Tianjin Grand Bridge</a></td>
-        <td><a href="./weinanWeiheGrandBridge.html">Most Weinan Weihe Grand Bridge</a></td>
-        <td><a href="./bangNaExpressway.html">Most Bang Na Expressway</a></td>
-        <td><a href="./manchac.html">Most Manchac</a></td>
-        <td><a href="./kontakt.html">Kontakt</a></td>
-        <td><a href="./lab2js.html">Lab2 Java Script</a></td>
-        <td><a href="./lab3.html">Lab3</a></td>
+        <td><a href="html/danyangKunshan.html">Most Danyang-Kunshan</a></td>
+        <td><a href="html/tianjinGrandBridge.html">Most Tianjin Grand Bridge</a></td>
+        <td><a href="html/weinanWeiheGrandBridge.html">Most Weinan Weihe Grand Bridge</a></td>
+        <td><a href="html/bangNaExpressway.html">Most Bang Na Expressway</a></td>
+        <td><a href="html/manchac.html">Most Manchac</a></td>
+        <td><a href="html/kontakt.html">Kontakt</a></td>
+        <td><a href="html/lab2js.html">Lab2 Java Script</a></td>
+        <td><a href="html/lab3.html">Lab3</a></td>
       </tr>
     </table>
     
