--- a/html/lab2js.html
+++ b/html/lab2js.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="pl">
 <head>
   <meta charset="UTF-8">
   <meta name="Content-Language" content="pl">
   <meta name="Author" content="Artem Tsymbalov">
   <title>Największe mosty świata</title>
-  <script src="./js/timedate.js"></script>
+  <script src="../js/timedate.js"></script>
 </head>
 <body onload="startclock()">
     <div id="zegarek"></div>
@@ -21,6 +21,6 @@
     <input type="button" value="czerwony" onclick="changeBackground('#FF0000')">
   </form>
   
-  <script src="./js/kolorujtlo.js" type="text/javascript"></script>
+  <script src="../js/kolorujtlo.js" type="text/javascript"></script>
 </body>
 </html>
