--- a/html/weinanWeiheGrandBridge.html
+++ b/html/weinanWeiheGrandBridge.html
@@ -5,19 +5,19 @@
     <meta name="Content-Language" content="pl">
     <meta name="Author" content="Artem Tsymbalov">
     <title>Największe mosty świata</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/style.css">
   </head>
   <body>
     <!-- Menu strony -->
     <table>
       <tr>
-        <td><a href="./index.html">Strona Główna</a></td>
-        <td><a href="./danyangKunshan.html">Most Danyang-Kunshan</a></td>
-        <td><a href="./tianjinGrandBridge.html">Most Tianjin Grand Bridge</a></td>
+        <td><a href="../index.html">Strona Główna</a></td>
+        <td><a href="danyangKunshan.html">Most Danyang-Kunshan</a></td>
+        <td><a href="tianjinGrandBridge.html">Most Tianjin Grand Bridge</a></td>
         <td><a href="./weinanWeiheGrandBridge.html">Most Weinan Weihe Grand Bridge</a></td>
-        <td><a href="./bangNaExpressway.html">Most Bang Na Expressway</a></td>
-        <td><a href="./manchac.html">Most Manchac</a></td>
-        <td><a href="./kontakt.html">Kontakt</a></td>
+        <td><a href="bangNaExpressway.html">Most Bang Na Expressway</a></td>
+        <td><a href="manchac.html">Most Manchac</a></td>
+        <td><a href="kontakt.html">Kontakt</a></td>
       </tr>
     </table>
 
@@ -27,7 +27,7 @@
       <div class="bridge-info">
         <!-- Sekcja 1: Opis Mostu Weinan Weihe Grand Bridge -->
         <div class="bridge-item">
-          <img src="./imgs/WeinanWeiheGrandBridge.png" alt="Most Weinan Weihe Grand Bridge 1">
+          <img src="../imgs/WeinanWeiheGrandBridge.png" alt="Most Weinan Weihe Grand Bridge 1">
           <div class="text">
             <h2>Opis Mostu Weinan Weihe Grand Bridge</h2>
             <p>Most Weinan Weihe Grand Bridge to imponująca konstrukcja znajdująca się w Chinach. Jest to jeden z najdłuższych mostów na świecie, który odgrywa kluczową rolę w połączeniu regionów gospodarczych i ułatwieniu transportu.</p>
@@ -36,7 +36,7 @@
 
         <!-- Sekcja 2: Znaczenie Mostu -->
         <div class="bridge-item">
-          <img src="./imgs/WeinanWeiheGrandBridge2.png" alt="Most Weinan Weihe Grand Bridge 2">
+          <img src="../imgs/WeinanWeiheGrandBridge2.png" alt="Most Weinan Weihe Grand Bridge 2">
           <div class="text">
             <h2>Znaczenie Mostu</h2>
             <p>Most Weinan Weihe Grand Bridge jest istotny dla rozwoju infrastruktury transportowej w regionie. Umożliwia sprawny przepływ towarów i osób, co przyczynia się do wzrostu gospodarczego oraz integracji społecznej.</p>
